<resources>
    <string name="app_name">CS125-Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_suggest">Suggestions</string>
    <string name="title_cart">Shopping List</string>
    <string name="title_history">History</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="options_open">Options</string>
    <string name="item_exp">Exp:</string>
    <string name="item_last">Last:</string>
    <string name="item_utility">Utility:</string>

    <string name="item_util1">History:</string>
    <string name="item_util2">Others:</string>
    <string name="item_util3">Collab:</string>
    <string name="item_exp2">Exp(Others):</string>
</resources>
